prevent jump to top of page after state change on thin screens

--- a/src/scss/components/exchanges/volumePie.scss
+++ b/src/scss/components/exchanges/volumePie.scss
@@ -9,6 +9,7 @@
   max-width: 544px;
   width: 544px;
   min-width: 494px;
+  min-height: 400px;
 
   svg {
     > text {
